added meta description and updated titles of htmls

--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>MyArt-Contact_us-RashmiAribenchi</title>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
@@ -17,16 +19,16 @@
     ></script>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link>
-    <title>Contact_us</title>
+    
 </head>
 <body>
     <h1>Contact us</h1>
         
     <p> For any enquiry, please email us to hello@myart.com </p>
            <div class="d-flex align-items-center">
-            <span> <a href="index.html#Home" class="primary-link" >Home Page</a> </span>
-            <span>  <a href="photo.html#Photos" class="primary-link">Photos</a> </span>
-            <span>  <a href="contact.html#contact" class="primary-link">Contact_us</a></span>
+            <span> <a href="index.html#Home" alt="Home_Page" class="primary-link" >Home Page</a> </span>
+            <span>  <a href="photo.html#Photos" alt="Photos" class="primary-link">Photos</a> </span>
+            <span>  <a href="contact.html#contact" alt="Contact_us" class="primary-link">Contact_us</a></span>
            </div>
  </body>
 </html>
