--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>MyArt-HomePage-RashmiAribenchi</title>
     <meta charset="UTF-8">
+    <meta name="description" content="ART is the reflection of your soul, your feelings & thoughts which is a broadest sense, is a form of communication. It can be in any form. This web page gives an insight of different versions of an ART."/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
@@ -17,7 +19,7 @@
     ></script>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link>
-    <title>HomePage</title>
+    
 </head>
 <body>
     <h1>
@@ -25,9 +27,9 @@
      My ART  <img src="src/art2.png" alt="" width="30" class="img-fluid-rounded"/></h1>
 <P>ART is the reflection of your soul, your feelings & thoughts which is a broadest sense, is a form of communication. Art is a diverse range of human activity, and resulting product, that involves creative or imaginative talent expressive of technical proficiency, beauty, emotional power, or conceptual ideas. There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</P>
             <div class="d-flex align-items-center">
-             <span> <a href="index.html#Home" class="primary-link" >Home Page</a> </span>
-             <span>  <a href="photo.html#Photos" class="primary-link">Photos</a> </span>
-             <span>  <a href="contact.html#contact" class="primary-link">Contact_us</a></span>
+             <span> <a href="index.html#Home" alt="Home_Page" class="primary-link" >Home Page</a> </span>
+             <span>  <a href="photo.html#Photos" alt="Photos" class="primary-link">Photos</a> </span>
+             <span>  <a href="contact.html#contact" alt="Contact_us" class="primary-link">Contact_us</a></span>
             </div>
          </body>
 </html>
