--- a/photo.html
+++ b/photo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>MyArt-Photos-RashmiAribenchi</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,17 +18,17 @@
     ></script>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link>
-    <title>Photos</title>
+    
 </head>
 <body>
     <h1>Photos</h1>
              
-    <img src="src/mumNbaby.png.jpg" alt=""  class="img"/>
+    <img src="src/mumNbaby.png.jpg" alt="MYArt"  class="img"/>
 
             <div class="d-flex align-items-center">
-             <span> <a href="index.html#Home" class="primary-link" >Home Page</a> </span>
-             <span>  <a href="photo.html#Photos" class="primary-link">Photos</a> </span>
-             <span>  <a href="contact.html#contact" class="primary-link">Contact_us</a></span>
+             <span> <a href="index.html#Home" alt="Home_Page" class="primary-link" >Home Page</a> </span>
+             <span>  <a href="photo.html#Photos" alt="Photos" class="primary-link">Photos</a> </span>
+             <span>  <a href="contact.html#contact" alt="Contact_us" class="primary-link">Contact_us</a></span>
             </div>
  </body>
 </html>
